Name fix. Legibility fix.

--- a/_css/site.css
+++ b/_css/site.css
@@ -5,7 +5,7 @@ body{
   background: #000;
   margin: 0px;
   font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-  font-weight: 200;
+  font-weight: 300;
   font-size: 14px;
   overflow-x: hidden;
 }
